--- a/Classifiers/kNN/knn.ipynb
+++ b/Classifiers/kNN/knn.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Based on the grid search results from the previous, we can set-up the 'best performing' kNN classifier.\n",
+    "# Based on the grid search results from the previous cell, we can set-up the 'best performing' kNN classifier.\n",
     "\n",
     "knn_clf = KNeighborsClassifier(n_neighbors=5, weights='distance', algorithm='brute', p=2, metric='minkowski')  "
    ]
